GNOME Bugzilla – Bug 792167
omxvideoenc: early return in fill_buffer() if something goes wrong
Last modified: 2018-01-07 14:24:15 UTC
.
Created attachment 366245 [details] [review] omxvideoenc: early return in fill_buffer() if something goes wrong If something goes wrong while trying to manually copy the input buffer, the 'break' was moving us out of the 'for' loop but not out of the switch block. So we ended up calling gst_video_frame_unmap() a second time (raising assertions) and returning TRUE rather than FALSE. Reproduced with a WIP zynqultrascaleplus OMX branch reporting wrong buffer sizes and so triggering this bug.
commit 5fa96cab7bf92d6840ab1c69824a94009acec2fc Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Wed Jan 3 16:07:18 2018 +0100 omxvideoenc: early return in fill_buffer() if something goes wrong If something goes wrong while trying to manually copy the input buffer, the 'break' was moving us out of the 'for' loop but not out of the switch block. So we ended up calling gst_video_frame_unmap() a second time (raising assertions) and returning TRUE rather than FALSE. Reproduced with a WIP zynqultrascaleplus OMX branch reporting wrong buffer sizes and so triggering this bug. https://bugzilla.gnome.org/show_bug.cgi?id=792167